# spy

./: .gitignore  CONTRIBUTORS  LICENSE  README.md  Rakefile  spy.cabal
distribution/: Makefile
distribution/man/: spy.1.md
src/: Main.hs
src/Spy/: Watcher.hs
test/: Package-Test.cabal
tests/: Tests.hs
