name:               spy
version:            0.1
license:            BSD3
license-file:       LICENSE
author:             Stefan Saasen
maintainer:         Stefan Saasen
copyright:          Stefan Saasen
synopsis:           A skeleton for creating haskell packages
category:           Development
description:        A skeleton for creating haskell packages
homepage:           https://bitbucket.org/ssaasen/spy
cabal-version:      >= 1.8
build-type:         Simple

source-repository   head
  type:             git
  location:         git@bitbucket.org:ssaasen/spy.git

flag                small_base
  description:      Choose the new, split-up base package.

executable  spy
  main-is:          Main.hs
  other-modules:    Spy.Watcher
  build-depends:
                    base < 5 && >= 3,
                    hfsevents >= 0.1.3,
                    cmdargs >= 0.10,
                    filepath >= 1.3,
                    filemanip >= 0.3.6.2,
                    process >= 1.1,
                    json >= 0.7

  ghc-options:
                    -Wall
                    -rtsopts
                    -fno-warn-unused-do-bind
                    -fno-warn-missing-signatures

  hs-source-dirs:
                    src


