Name:               Haskell-Package-Test
Version:            0.0.1
Author:             Stefan Saasen
Maintainer:         Stefan Saasen
Copyright:          Stefan Saasen
Synopsis:           A skeleton for testing haskell packages
Category:           Development
Description:        A skeleton for testing haskell packages
Homepage:           https://github.com/juretta/haskell-package
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:juretta/haskell-package.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Executable          package-test
  Hs-Source-Dirs:  
                    ../src src

  Main-Is: 
                    Main.hs

  Ghc-Options:
                    -O2
                    -Wall
                    -fhpc
                    -fwarn-tabs
  
  Build-Depends:  
                   base < 5 && >= 3
                   , QuickCheck
                   , test-framework
                   , test-framework-quickcheck2
                   , test-framework-hunit

